--- a/analysis_report.html
+++ b/analysis_report.html
@@ -139,7 +139,7 @@ $(document).ready(function () {
 
 <div id="synopsis" class="section level1">
 <h1>Synopsis</h1>
-<p>In this report, we attempt to predict the risk of the loan being default based on the past loan data. We obtained data from LendingClub’s website(<a href="https://www.lendingclub.com/info/download-data.action" class="uri">https://www.lendingclub.com/info/download-data.action</a>). We use loan data from year 2012-2014 as training and cross validation set and loan data from year 2015 as a testing set. We also compare our investment performance against the baseline algorithm. We found that, among multiple machine learning algorithms that we tried, Logistic Regression provided reasonable trade-off performance, and higher return than naive loan picking strategy can be achieved.</p>
+<p>In this report, we attempt to predict the risk of the loan being default based on the past loan data. We obtained data from LendingClub’s website(<a href="https://www.lendingclub.com/info/download-data.action" class="uri">https://www.lendingclub.com/info/download-data.action</a>). We use loan data from year 2012-2014 as training and cross validation set and loan data from year 2015 as a testing set. We also compare our investment performance against the baseline algorithm. We found that, among multiple machine learning algorithms that we tried, Logistic Regression provided a reasonable trade-off performance, and a higher return than the naive loan picking strategy can be achieved.</p>
 </div>
 <div id="explore-data" class="section level1">
 <h1>Explore Data</h1>
